# Booking

./: Cargo.toml
src/: main.rs  pages.rs
src/pages/: calendar.rs  home.rs  venues.rs
templates/: page.html
templates/calendar/: calendar.html  month.html
templates/home/: home.html
templates/venues/: venues.html
